--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <nav class="menu">
         <ul>
             <li><a href="#animais">Animais</a></li>
-            <li><a href="#faq"></a>Faq</li>
+            <li><a href="#faq">Faq</a></li>
             <li><a href="#contato">Contato</a></li>
             <li><a href="https://www.origamid.com/">Dev → </a></li>
         </ul>
     </nav>
 
-    <section class="gird-section animais" id="animais">
-        <h1 class="titutlo">Animais Fantásticos</h1>
-        <ul>
+    <section class="grid-section animais" id="animais">
+        <h1 class="titulo">Animais Fantásticos</h1>
+        <ul class="animais-lista">
             <li>
                 <img src="img/imagem1.jpg" alt="raposa">
             </li>
@@ -120,8 +120,8 @@
     </section>
 
     <section class="grid-section faq" id="faq">
-        <h1>FAQ</h1>
-        <dl>
+        <h1 class="titulo">FAQ</h1>
+        <dl class="faq-lista">
             <dt>Qual a idade dos animais?</dt>
             <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eveniet nihil labore magnam
                 magni recusandae mollitia optio commodi corporis. </dd>
@@ -141,7 +141,7 @@
     </section>
 
     <section class="grid-section contato" id="contato">
-        <h1>Contato</h1>
+        <h1 class="titulo">Contato</h1>
         <div class="mapa">
             <img src="img/mapa.png">
         </div>
@@ -157,7 +157,6 @@
     <footer class="copy">
         <p>Todos os direitos reservados</p>
     </footer>
-
 
 
     <script src="script.js"></script>
