--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animais Fantásticos</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script>document.documentElement.className += ' js';</script>
 </head>
 
 <body>
-
     <nav class="menu">
         <ul>
             <li><a href="#animais">Animais</a></li>
@@ -18,10 +18,9 @@
             <li><a href="https://www.origamid.com/">Dev → </a></li>
         </ul>
     </nav>
-
     <section class="grid-section animais" id="animais">
         <h1 class="titulo">Animais Fantásticos</h1>
-        <ul class="animais-lista">
+        <ul class="animais-lista js-tabmenu">
             <li>
                 <img src="img/imagem1.jpg" alt="raposa">
             </li>
@@ -41,10 +40,7 @@
                 <img src="img/imagem6.jpg" alt="leão">
             </li>
         </ul>
-
-
-
-        <div class="animais-descricao">
+        <div class="animais-descricao js-tabcontent">
             <section>
                 <h2>Raposa</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates molestias molestiae, aut nam
@@ -56,7 +52,6 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum assumenda odio voluptas, dolores
                     laboriosam reiciendis facilis? Quaerat dolore sit quod.</p>
             </section>
-
             <section>
                 <h2>Esquilo</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates molestias molestiae, aut nam
@@ -68,7 +63,6 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum assumenda odio voluptas, dolores
                     laboriosam reiciendis facilis? Quaerat dolore sit quod.</p>
             </section>
-
             <section>
                 <h2>urso</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates molestias molestiae, aut nam
@@ -80,7 +74,6 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum assumenda odio voluptas, dolores
                     laboriosam reiciendis facilis? Quaerat dolore sit quod.</p>
             </section>
-
             <section>
                 <h2>Lobo</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates molestias molestiae, aut nam
@@ -92,7 +85,6 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum assumenda odio voluptas, dolores
                     laboriosam reiciendis facilis? Quaerat dolore sit quod.</p>
             </section>
-
             <section>
                 <h2>Macaco</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates molestias molestiae, aut nam
@@ -104,7 +96,6 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum assumenda odio voluptas, dolores
                     laboriosam reiciendis facilis? Quaerat dolore sit quod.</p>
             </section>
-
             <section>
                 <h2>Leão</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates molestias molestiae, aut nam
@@ -153,13 +144,12 @@
         </ul>
     </section>
 
-
     <footer class="copy">
         <p>Todos os direitos reservados</p>
     </footer>
 
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
