--- a/index.html
+++ b/index.html
@@ -1,155 +1,166 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Animais Fantásticos</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC" rel="stylesheet">
     <script>document.documentElement.className += ' js';</script>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 
 <body>
-    <nav class="menu">
+    <nav class="menu js-menu">
         <ul>
             <li><a href="#animais">Animais</a></li>
             <li><a href="#faq">Faq</a></li>
             <li><a href="#contato">Contato</a></li>
-            <li><a href="https://www.origamid.com/">Dev → </a></li>
+            <li><a href="https://danvilela.github.io/curriculum/">Dev →</a></li>
         </ul>
     </nav>
-    <section class="grid-section animais" id="animais">
+    <section class="grid-section animais js-scroll" id="animais">
         <h1 class="titulo">Animais Fantásticos</h1>
         <ul class="animais-lista js-tabmenu">
             <li>
-                <img src="img/imagem1.jpg" alt="raposa">
+                <img src="img/imagem1.jpg">
             </li>
             <li>
-                <img src="img/imagem2.jpg" alt="esquilo">
+                <img src="img/imagem2.jpg">
             </li>
             <li>
-                <img src="img/imagem3.jpg" alt="urso pardo">
+                <img src="img/imagem3.jpg">
             </li>
             <li>
-                <img src="img/imagem4.jpg" alt="lobo">
+                <img src="img/imagem4.jpg">
             </li>
             <li>
-                <img src="img/imagem5.jpg" alt="macaco">
+                <img src="img/imagem5.jpg">
             </li>
             <li>
-                <img src="img/imagem6.jpg" alt="leão">
+                <img src="img/imagem6.jpg">
             </li>
         </ul>
         <div class="animais-descricao js-tabcontent">
             <section>
                 <h2>Raposa</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates molestias molestiae, aut nam
-                    soluta explicabo, natus asperiores numquam corrupti quia cumque velit eveniet laborum quidem?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum assumenda odio voluptas, dolores
-                    laboriosam reiciendis facilis? Quaerat dolore sit quod.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum assumenda odio voluptas, dolores
-                    laboriosam reiciendis facilis? Quaerat dolore sit quod.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum assumenda odio voluptas, dolores
-                    laboriosam reiciendis facilis? Quaerat dolore sit quod.</p>
+                <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte
+                    médio, caracterizados
+                    por um focinho comprido e uma cauda longa e peluda.</p>
+                <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos
+                    felídeos.</p>
             </section>
+
             <section>
                 <h2>Esquilo</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates molestias molestiae, aut nam
-                    soluta explicabo, natus asperiores numquam corrupti quia cumque velit eveniet laborum quidem?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum assumenda odio voluptas, dolores
-                    laboriosam reiciendis facilis? Quaerat dolore sit quod.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum assumenda odio voluptas, dolores
-                    laboriosam reiciendis facilis? Quaerat dolore sit quod.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum assumenda odio voluptas, dolores
-                    laboriosam reiciendis facilis? Quaerat dolore sit quod.</p>
+                <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte
+                    médio, caracterizados
+                    por um focinho comprido e uma cauda longa e peluda.</p>
+                <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos
+                    felídeos.</p>
+                <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas
+                    verdadeiras", do
+                    qual a raposa vermelha é a mais comum.</p>
+                <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos
+                    felídeos.</p>
+                <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas
+                    verdadeiras", do
+                    qual a raposa vermelha é a mais comum.</p>
+                <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos
+                    felídeos.</p>
             </section>
             <section>
-                <h2>urso</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates molestias molestiae, aut nam
-                    soluta explicabo, natus asperiores numquam corrupti quia cumque velit eveniet laborum quidem?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum assumenda odio voluptas, dolores
-                    laboriosam reiciendis facilis? Quaerat dolore sit quod.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum assumenda odio voluptas, dolores
-                    laboriosam reiciendis facilis? Quaerat dolore sit quod.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum assumenda odio voluptas, dolores
-                    laboriosam reiciendis facilis? Quaerat dolore sit quod.</p>
+                <h2>Urso</h2>
+                <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte
+                    médio, caracterizados
+                    por um focinho comprido e uma cauda longa e peluda.</p>
+                <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos
+                    felídeos.</p>
+                <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas
+                    verdadeiras", do
+                    qual a raposa vermelha é a mais comum.</p>
+                <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos
+                    felídeos.</p>
             </section>
             <section>
                 <h2>Lobo</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates molestias molestiae, aut nam
-                    soluta explicabo, natus asperiores numquam corrupti quia cumque velit eveniet laborum quidem?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum assumenda odio voluptas, dolores
-                    laboriosam reiciendis facilis? Quaerat dolore sit quod.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum assumenda odio voluptas, dolores
-                    laboriosam reiciendis facilis? Quaerat dolore sit quod.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum assumenda odio voluptas, dolores
-                    laboriosam reiciendis facilis? Quaerat dolore sit quod.</p>
+                <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte
+                    médio, caracterizados
+                    por um focinho comprido e uma cauda longa e peluda.</p>
+                <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos
+                    felídeos.</p>
+                <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas
+                    verdadeiras", do
+                    qual a raposa vermelha é a mais comum.</p>
+                <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos
+                    felídeos.</p>
             </section>
             <section>
                 <h2>Macaco</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates molestias molestiae, aut nam
-                    soluta explicabo, natus asperiores numquam corrupti quia cumque velit eveniet laborum quidem?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum assumenda odio voluptas, dolores
-                    laboriosam reiciendis facilis? Quaerat dolore sit quod.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum assumenda odio voluptas, dolores
-                    laboriosam reiciendis facilis? Quaerat dolore sit quod.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum assumenda odio voluptas, dolores
-                    laboriosam reiciendis facilis? Quaerat dolore sit quod.</p>
+                <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte
+                    médio, caracterizados
+                    por um focinho comprido e uma cauda longa e peluda.</p>
+                <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos
+                    felídeos.</p>
+                <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas
+                    verdadeiras", do
+                    qual a raposa vermelha é a mais comum.</p>
+                <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos
+                    felídeos.</p>
             </section>
             <section>
                 <h2>Leão</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates molestias molestiae, aut nam
-                    soluta explicabo, natus asperiores numquam corrupti quia cumque velit eveniet laborum quidem?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum assumenda odio voluptas, dolores
-                    laboriosam reiciendis facilis? Quaerat dolore sit quod.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum assumenda odio voluptas, dolores
-                    laboriosam reiciendis facilis? Quaerat dolore sit quod.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum assumenda odio voluptas, dolores
-                    laboriosam reiciendis facilis? Quaerat dolore sit quod.</p>
+                <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte
+                    médio, caracterizados
+                    por um focinho comprido e uma cauda longa e peluda.</p>
+                <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos
+                    felídeos.</p>
+                <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas
+                    verdadeiras", do
+                    qual a raposa vermelha é a mais comum.</p>
+                <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos
+                    felídeos.</p>
             </section>
         </div>
     </section>
 
-    <section class="grid-section faq" id="faq">
+    <section class="grid-section faq js-scroll" id="faq">
         <h1 class="titulo">FAQ</h1>
-        <dl class="faq-lista">
+        <dl class="faq-lista js-accordion">
             <dt>Qual a idade dos animais?</dt>
-            <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eveniet nihil labore magnam
-                magni recusandae mollitia optio commodi corporis. </dd>
-
+            <dd>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte
+                médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</dd>
             <dt>Eles são fantásticos?</dt>
-            <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eveniet nihil labore magnam
-                magni recusandae mollitia optio commodi corporis. </dd>
-
+            <dd>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos
+                felídeos.</dd>
             <dt>Qual a diferença?</dt>
-            <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eveniet nihil labore magnam
-                magni recusandae mollitia optio commodi corporis. </dd>
-
+            <dd>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte
+                médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</dd>
             <dt>Como proteger?</dt>
-            <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eveniet nihil labore magnam
-                magni recusandae mollitia optio commodi corporis. </dd>
+            <dd>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos
+                felídeos.</dd>
         </dl>
     </section>
 
-    <section class="grid-section contato" id="contato">
+    <section class="grid-section contato js-scroll" id="contato">
         <h1 class="titulo">Contato</h1>
         <div class="mapa">
             <img src="img/mapa.png">
         </div>
         <ul class="dados">
-            <li>contato@animaisfantasticos.com</li>
-            <li>+55 (21) 99999=9999</li>
-            <li>Rua xD, Vargem Pequena</li>
+            <li>contato@origamid.com</li>
+            <li>+55 (21) 9999-9999</li>
+            <li>Rua do Conde, nº 21</li>
             <li>Rio de Janeiro - RJ</li>
         </ul>
     </section>
 
     <footer class="copy">
-        <p>Todos os direitos reservados</p>
+        <p>Todos os direitos reservados.</p>
     </footer>
 
-
-    <script src="js/script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
