--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <nav class="menu js-menu">
+    <nav class="menu" data-menu="suave">
         <ul>
             <li><a href="#animais">Animais</a></li>
             <li><a href="#faq">Faq</a></li>
@@ -20,9 +20,9 @@
             <li><a href="https://danvilela.github.io/curriculum/">Dev →</a></li>
         </ul>
     </nav>
-    <section class="grid-section animais js-scroll" id="animais">
+    <section class="grid-section animais" data-anime="scroll" id="animais">
         <h1 class="titulo">Animais Fantásticos</h1>
-        <ul class="animais-lista js-tabmenu">
+        <ul class="animais-lista" data-tab="menu">
             <li>
                 <img src="img/imagem1.jpg">
             </li>
@@ -42,8 +42,8 @@
                 <img src="img/imagem6.jpg">
             </li>
         </ul>
-        <div class="animais-descricao js-tabcontent">
-            <section>
+        <div class="animais-descricao" data-tab="content">
+            <section data-anime="show-down" data-anime="show-right">
                 <h2>Raposa</h2>
                 <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte
                     médio, caracterizados
@@ -52,7 +52,7 @@
                     felídeos.</p>
             </section>
 
-            <section>
+            <section data-anime="show-right">
                 <h2>Esquilo</h2>
                 <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte
                     médio, caracterizados
@@ -70,7 +70,7 @@
                 <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos
                     felídeos.</p>
             </section>
-            <section>
+            <section data-anime="show-down">
                 <h2>Urso</h2>
                 <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte
                     médio, caracterizados
@@ -83,7 +83,7 @@
                 <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos
                     felídeos.</p>
             </section>
-            <section>
+            <section data-anime="show-down">
                 <h2>Lobo</h2>
                 <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte
                     médio, caracterizados
@@ -96,7 +96,7 @@
                 <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos
                     felídeos.</p>
             </section>
-            <section>
+            <section data-anime="show-right">
                 <h2>Macaco</h2>
                 <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte
                     médio, caracterizados
@@ -109,7 +109,7 @@
                 <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos
                     felídeos.</p>
             </section>
-            <section>
+            <section data-anime="show-right">
                 <h2>Leão</h2>
                 <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte
                     médio, caracterizados
@@ -125,9 +125,9 @@
         </div>
     </section>
 
-    <section class="grid-section faq js-scroll" id="faq">
+    <section class="grid-section faq" data-anime="scroll" id="faq">
         <h1 class="titulo">FAQ</h1>
-        <dl class="faq-lista js-accordion">
+        <dl class="faq-lista" data-anime="accordion">
             <dt>Qual a idade dos animais?</dt>
             <dd>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte
                 médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</dd>
@@ -143,7 +143,7 @@
         </dl>
     </section>
 
-    <section class="grid-section contato js-scroll" id="contato">
+    <section class="grid-section contato" data-anime="scroll" id="contato">
         <h1 class="titulo">Contato</h1>
         <div class="mapa">
             <img src="img/mapa.png">
