Divisão do JS em Modules

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </div>
         <ul class="dados">
             <li>contato@origamid.com</li>
-            <li>+55 (21) 9999-9999</li>
+            <li>+55 (21) 99999-9999</li>
             <li>Rua do Conde, nº 21</li>
             <li>Rio de Janeiro - RJ</li>
         </ul>
@@ -160,7 +160,7 @@
         <p>Todos os direitos reservados.</p>
     </footer>
 
-    <script src="/js/script.js"></script>
+    <script type="module" src="/js/script.js"></script>
 </body>
 
 </html>
