--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
         <nav class="menu" data-menu="suave">
             <ul>
                 <li><a href="#animais">Animais</a></li>
+                <li data-dropdown>
+                    <a href="sobre.html">Sobre</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="empresa.html">A empresa</a></li>
+                        <li><a href="equipe.html">Equipe</a></li>
+                        <li><a href="socios.html">Sócios</a></li>
+                        <li><a href="investidores.html">Investidores</a></li>
+                    </ul>
+                </li>
                 <li><a href="#faq">Faq</a></li>
                 <li><a href="#contato">Contato</a></li>
                 <li><a data-modal="abrir" href="login.html">Login →</a></li>
