Contagem e animação dos números de animais(anima-numeros)

--- a/index.html
+++ b/index.html
@@ -166,6 +166,42 @@
             </dl>
         </section>
 
+
+        <section class="grid-section numeros" data-anime="scroll">
+            <h1 class="titulo">Números</h1>
+            <div class="numeros-grid">
+                <div class="numero-animal">
+                    <h3>Raposas</h3>
+                    <span data-numero>4800</span>
+                </div>
+                <div class="numero-animal">
+                    <h3>Esquilos</h3>
+                    <span data-numero>4821</span>
+                </div>
+                <div class="numero-animal">
+                    <h3>Esquilos</h3>
+                    <span data-numero>8356</span>
+                </div>
+                <div class="numero-animal">
+                    <h3>Ursos</h3>
+                    <span data-numero>3201</span>
+                </div>
+                <div class="numero-animal">
+                    <h3>Lobos</h3>
+                    <span data-numero>8653</span>
+                </div>
+                <div class="numero-animal">
+                    <h3>Macacos</h3>
+                    <span data-numero>12304</span>
+                </div>
+                <div class="numero-animal">
+                    <h3>Leões</h3>
+                    <span data-numero>3589</span>
+                </div>
+
+            </div>
+        </section>
+
         <section class="grid-section contato" data-anime="scroll" id="contato">
             <h1 class="titulo">Contato</h1>
             <div class="mapa" data-tooltip aria-label="Endereço próximo ao estacionamento.">
