--- a/index.html
+++ b/index.html
@@ -212,6 +212,8 @@
                 <li>+55 (21) 99999-9999</li>
                 <li>Rua do Conde, nº 21</li>
                 <li>Rio de Janeiro - RJ</li>
+                <li data-semana="1,2,3,4,5" data-horario="9,18">Segunda à Sexta - Das 09h às 18h</li>
+
             </ul>
         </section>
 
